Delete stray js, explicity require js files in application and add z-index fix to dropdown

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -237,6 +237,7 @@ hr {
   border: solid 1px #d4d4d4;
   padding-top: 12px;
   padding-bottom: 12px;
+  z-index: 5;
   img {
     width: 23px;
     position: absolute;
